query subscribe trigger startTime implemented and tested